--- a/Universal x86 Tuning Utility/Views/Pages/Automations.xaml
+++ b/Universal x86 Tuning Utility/Views/Pages/Automations.xaml
@@ -1,116 +1,116 @@
 ﻿<Page x:Class="Universal_x86_Tuning_Utility.Views.Pages.Automations"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Universal_x86_Tuning_Utility.Views.Pages"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       d:DataContext="{d:DesignInstance local:CustomPresets, IsDesignTimeCreatable=False}"
       d:Background="{DynamicResource ApplicationBackgroundBrush}"
       Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-      mc:Ignorable="d" 
+      mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Automations" Loaded="Page_Loaded">
 
-    <Grid>
-        <DockPanel LastChildFill="False" Margin="15,0,15,0">
-            <TextBlock
+	<Grid>
+		<DockPanel LastChildFill="False" Margin="15,0,15,0">
+			<TextBlock
             FontSize="26"
             FontWeight="Medium"
-            Text="Automations" DockPanel.Dock="Top" Margin="3,10,0,0"/>
+            Text="自动化任务" DockPanel.Dock="Top" Margin="3,10,0,0"/>
 
-            <ui:CardControl
+			<ui:CardControl
             IsEnabled="True"
             Icon="BatteryCharge20" Margin="0,9,0,0" DockPanel.Dock="Top">
-                <ui:CardControl.Header>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-                        <StackPanel Grid.Column="0" VerticalAlignment="Center">
-                            <TextBlock
+				<ui:CardControl.Header>
+					<Grid>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="*" />
+							<ColumnDefinition Width="Auto" />
+						</Grid.ColumnDefinitions>
+						<StackPanel Grid.Column="0" VerticalAlignment="Center">
+							<TextBlock
                             FontSize="14"
                             FontWeight="Medium"
-                            Text="Preset on Battery Charge" />
-                            <TextBlock
+                            Text="充电时应用预设" />
+							<TextBlock
                             FontSize="12"
                             Foreground="{DynamicResource TextFillColorTertiaryBrush}"
-                            Text="Provides the ability to set a preset to apply when the battery is charging."/>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" Grid.Column="1">
-                            <ComboBox VerticalAlignment="Center" SelectedIndex="0" MinWidth="134" Name="cbxCharge" SelectionChanged="cbxCharge_SelectionChanged" Height="37">
-                                <ComboBoxItem>None</ComboBoxItem>
-                            </ComboBox>
-                            <ui:Button  HorizontalAlignment="Right" VerticalAlignment="Center" Height="37" DockPanel.Dock="Bottom" Width="50" Name="btnChargeLoad" ToolTip="Updates dropdown list with current presets" Click="btnChargeLoad_Click" Margin="9,0,0,0">
-                                <ui:SymbolIcon Symbol="ArrowSync20" FontSize="24"/>
-                            </ui:Button>
-                        </StackPanel>
+                            Text="允许设置当电池充电（接通电源）时自动应用的预设。"/>
+						</StackPanel>
+						<StackPanel Orientation="Horizontal" Grid.Column="1">
+							<ComboBox VerticalAlignment="Center" SelectedIndex="0" MinWidth="134" Name="cbxCharge" SelectionChanged="cbxCharge_SelectionChanged" Height="37">
+								<ComboBoxItem>无</ComboBoxItem>
+							</ComboBox>
+							<ui:Button  HorizontalAlignment="Right" VerticalAlignment="Center" Height="37" DockPanel.Dock="Bottom" Width="50" Name="btnChargeLoad" ToolTip="刷新下拉列表中的当前预设" Click="btnChargeLoad_Click" Margin="9,0,0,0">
+								<ui:SymbolIcon Symbol="ArrowSync20" FontSize="24"/>
+							</ui:Button>
+						</StackPanel>
 
-                    </Grid>
-                </ui:CardControl.Header>
-            </ui:CardControl>
-            <ui:CardControl
+					</Grid>
+				</ui:CardControl.Header>
+			</ui:CardControl>
+			<ui:CardControl
             IsEnabled="True"
             Icon="Battery720" Margin="0,9,0,0" DockPanel.Dock="Top">
-                <ui:CardControl.Header>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-                        <StackPanel Grid.Column="0" VerticalAlignment="Center">
-                            <TextBlock
+				<ui:CardControl.Header>
+					<Grid>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="*" />
+							<ColumnDefinition Width="Auto" />
+						</Grid.ColumnDefinitions>
+						<StackPanel Grid.Column="0" VerticalAlignment="Center">
+							<TextBlock
                             FontSize="14"
                             FontWeight="Medium"
-                            Text="Preset on Battery Discharge" />
-                            <TextBlock
+                            Text="放电时应用预设" />
+							<TextBlock
                             FontSize="12"
                             Foreground="{DynamicResource TextFillColorTertiaryBrush}"
-                            Text="Provides the ability to set a preset to apply when the battery is discharging."/>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" Grid.Column="1">
-                            <ComboBox VerticalAlignment="Center" SelectedIndex="0" MinWidth="134" Name="cbxDischarge" SelectionChanged="cbxDischarge_SelectionChanged" Height="37">
-                                <ComboBoxItem>None</ComboBoxItem>
-                            </ComboBox>
-                            <ui:Button  HorizontalAlignment="Right" VerticalAlignment="Center" Height="37" DockPanel.Dock="Bottom" Width="50" Name="btnDischargeLoad" ToolTip="Updates dropdown list with current presets" Click="btnDischargeLoad_Click" Margin="9,0,0,0">
-                                <ui:SymbolIcon Symbol="ArrowSync20" FontSize="24"/>
-                            </ui:Button>
-                        </StackPanel>
-                    </Grid>
-                </ui:CardControl.Header>
-            </ui:CardControl>
+                            Text="允许设置当电池放电（使用电池）时自动应用的预设。"/>
+						</StackPanel>
+						<StackPanel Orientation="Horizontal" Grid.Column="1">
+							<ComboBox VerticalAlignment="Center" SelectedIndex="0" MinWidth="134" Name="cbxDischarge" SelectionChanged="cbxDischarge_SelectionChanged" Height="37">
+								<ComboBoxItem>无</ComboBoxItem>
+							</ComboBox>
+							<ui:Button  HorizontalAlignment="Right" VerticalAlignment="Center" Height="37" DockPanel.Dock="Bottom" Width="50" Name="btnDischargeLoad" ToolTip="刷新下拉列表中的当前预设" Click="btnDischargeLoad_Click" Margin="9,0,0,0">
+								<ui:SymbolIcon Symbol="ArrowSync20" FontSize="24"/>
+							</ui:Button>
+						</StackPanel>
+					</Grid>
+				</ui:CardControl.Header>
+			</ui:CardControl>
 
-            <ui:CardControl
+			<ui:CardControl
             IsEnabled="True"
             Icon="Sleep20" Margin="0,9,0,0" DockPanel.Dock="Top">
-                <ui:CardControl.Header>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-                        <StackPanel Grid.Column="0" VerticalAlignment="Center">
-                            <TextBlock
+				<ui:CardControl.Header>
+					<Grid>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="*" />
+							<ColumnDefinition Width="Auto" />
+						</Grid.ColumnDefinitions>
+						<StackPanel Grid.Column="0" VerticalAlignment="Center">
+							<TextBlock
                             FontSize="14"
                             FontWeight="Medium"
-                            Text="Preset on System Resume" />
-                            <TextBlock
+                            Text="系统唤醒时应用预设" />
+							<TextBlock
                             FontSize="12"
                             Foreground="{DynamicResource TextFillColorTertiaryBrush}"
-                            Text="Provides the ability to set a preset to apply on system resume from sleep/hibernation."/>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" Grid.Column="1">
-                            <ComboBox VerticalAlignment="Center" SelectedIndex="0" MinWidth="134" Name="cbxResume" SelectionChanged="cbxResume_SelectionChanged" Height="37">
-                                <ComboBoxItem>None</ComboBoxItem>
-                            </ComboBox>
-                            <ui:Button  HorizontalAlignment="Right" VerticalAlignment="Center" Height="37" DockPanel.Dock="Bottom" Width="50" Name="btnResumeLoad" ToolTip="Updates dropdown list with current presets" Click="btnResume_Click" Margin="9,0,0,0">
-                                <ui:SymbolIcon Symbol="ArrowSync20" FontSize="24"/>
-                            </ui:Button>
-                        </StackPanel>
-                    </Grid>
-                </ui:CardControl.Header>
-            </ui:CardControl>
-        </DockPanel>
-    </Grid>
+                            Text="允许设置当系统从睡眠/休眠状态唤醒时自动应用的预设。"/>
+						</StackPanel>
+						<StackPanel Orientation="Horizontal" Grid.Column="1">
+							<ComboBox VerticalAlignment="Center" SelectedIndex="0" MinWidth="134" Name="cbxResume" SelectionChanged="cbxResume_SelectionChanged" Height="37">
+								<ComboBoxItem>无</ComboBoxItem>
+							</ComboBox>
+							<ui:Button  HorizontalAlignment="Right" VerticalAlignment="Center" Height="37" DockPanel.Dock="Bottom" Width="50" Name="btnResumeLoad" ToolTip="刷新下拉列表中的当前预设" Click="btnResume_Click" Margin="9,0,0,0">
+								<ui:SymbolIcon Symbol="ArrowSync20" FontSize="24"/>
+							</ui:Button>
+						</StackPanel>
+					</Grid>
+				</ui:CardControl.Header>
+			</ui:CardControl>
+		</DockPanel>
+	</Grid>
 </Page>
